--- a/SpringBootUI/src/main/resources/application.properties
+++ b/SpringBootUI/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.output.ansi.enabled=ALWAYS
 spring.application.name=SpringBootUI
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
+
+hibernate.hbm2ddl.import_files=classpath:/queries/demo.sql
+spring.sql="classpath:/queries/demo.sql"
+spring.sql.init.mode=always
+# default path: h2-console
+#spring.h2.console.path=/h2-ui
