--- a/EmployeeProjectGradle/src/main/resources/application.properties
+++ b/EmployeeProjectGradle/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=EmployeeProjectGradle
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:mem:employee
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
